# RoSE

./: .gitignore  .pre-commit-config.yaml  CITATION.cff  LICENSE  Makefile  README.md  pyproject.toml  setup.cfg  tox.ini
.github/: copilot-instructions.md
.github/workflows/: ci-cd.yml
.pre-commit-hooks/: README.md  update-version.py
src/RoSE/: __init__.py  rose.py  rose_mha.py
tests/: test_init.py  test_rose.py  test_rose_numerical.py
